--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -53,10 +53,10 @@ jobs:
     needs: [Docker-image]
     steps:
     - name: Execute component test
-      run: chmod +x ci/component-test.sh && GIT_COMMIT="GA-$GITHUB_SHA" && ci/component-test.sh
+      run: chmod +x ci/component-test.sh && ci/component-test.sh
   Performance-test:
     runs-on: ubuntu-latest
     needs: [Docker-image]
     steps:
     - name: Execute performance test
-      run: chmod +x ci/performance-test.sh && GIT_COMMIT="GA-$GITHUB_SHA" && ci/component-test.sh
+      run: chmod +x ci/performance-test.sh && ci/component-test.sh
