--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -66,7 +66,7 @@ jobs:
         name: code
         path: .
     - name: Execute component test
-      run: chmod +x ci/component-test.sh && ci/component-test.sh
+      run: chmod +x ci/component-test.sh
   Performance-test:
     runs-on: ubuntu-latest
     needs: [Docker-image]
@@ -77,4 +77,4 @@ jobs:
         name: code
         path: .
     - name: Execute performance test
-      run: chmod +x ci/performance-test.sh && ci/component-test.sh #This is a comment...
+      run: chmod +x ci/performance-test.sh
